Fixed image overlaping dropdown

--- a/src/styles/example.scss
+++ b/src/styles/example.scss
@@ -184,7 +184,7 @@ h2 {
   width: 25%;
   justify-content: space-around;
   justify-items: center;
-  position: relative;
+  // position: relative;
   overflow: scroll;
   border: 2px outset rgb(45, 18, 57);
   border-radius: 25px;
@@ -259,7 +259,7 @@ path:hover {
 }
 
 img {
-  position: relative;
+  // position: relative;
   height: 200px;
   width: 200px;
 }
@@ -669,7 +669,7 @@ path:hover {
 }
 
 img {
-  position: relative;
+  // position: relative;
   height: 200px;
   width: 200px;
 }
